# treeline

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .treeline-ignore  .treeline_dir  License  Makefile  README.md  changelog.md  code_diff.html  code_visualization.html  contributing.md  deploy_to_pypi.sh  docker-compose.yaml  dockerfile  lazy_tag.sh  misc.txt  open_visualization.html  package-lock.json  package.json  pyproject.toml  setup.py  tox.ini  tree.md  treeline_report.md
.treeline_cache/: treeline.json  treeline.pkl
docs/: code_analysis.rst  code_visualization.html  conf.py  git_integration.rst  index.html  index.rst  installation.rst  quickstart.rst  tree.md  user_guide.rst  visualization.rst
docs-site/: package-lock.json  sidebars.ts
example/: code_diff.html  dependencies.html  sample.py  tree.md  tut1.ipynb
results/: code_analysis.html  code_analysis.md  code_visualization.html  tree.md
source/: code_analysis.rst  conf.py  git_integration.rst  index.rst  installation.rst  quickstart.rst  user_guide.rst  visualization.rst
tests/: .treeline_dir  test_checkers.py  test_core.py  test_empty_dir.py  test_integration.py  test_missing_dir.py  test_nested_dir.py  test_security_detection.py  test_special_char.py  test_treeline.py
treeline/: __init__.py  analyzer.py  cli.py  config_manager.py  core.py  default_ignore  dependency_analyzer.py  diff_visualizer.py  enhanced_analyzer.py  enhanced_callgraph.py  git_temporal_analyzer.py  ignore.py  security_analyzer.py  treeline.json  treeline_diagnostics.json  type_checker.py
treeline-frontend/: .babelrc  jest.config.cjs  jest.setup.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
treeline.egg-info/: PKG-INFO  SOURCES.txt
treeline/api/: app.py
(+270 files in other folders)
